# GBNext

./: README.md
include/: GBNext.h
include/CPU/: CPU.h  InstructionPointerTables.h  RegisterUnion.h
include/Macroes/: InstructionTemplateIndexes.h
include/Memory/: Cartridge.h  IOPorts.h  MemoryMap.h  MemoryObject.h  ObjectAttributeMemory.h  ROM.h  VideoRAM.h  VolatileMemory.h
include/Memory/MBC/: MBC1.cpp  MBC1.h  MBC2.h  MBC3.h  MemoryBankController.h  NoMBC.h
src/: CMakeLists.txt  CPU.cpp  Cartridge.cpp  GBNext.cpp  IOPorts.cpp  MBC1.cpp  MBC2.cpp  MBC3.cpp  MemoryBankController.cpp  MemoryMap.cpp  MemoryObject.cpp  NoMBC.cpp  ObjectAttributeMemory.cpp  ROM.cpp  RegisterUnion.cpp  VideoRAM.cpp  VolatileMemory.cpp  main.cpp
